# dbtDataLake

./: .gitignore  .pre-commit-config.yaml  FILE_STRUCTURE.md  GITHUB_CI_FIX.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci_cd.yml  data_generation.yml
config/glue_crawlers/: crm_crawler.json  finance_crawler.json  operations_crawler.json
data_quality/: README.md
data_quality/great_expectations/: great_expectations.yml
dbt_project/: dbt_project.yml
dbt_project/models/bronze/: bronze_accounts.sql  bronze_customers.sql  bronze_orders.sql  bronze_transactions.sql  schema.yml
dbt_project/models/gold/: gold_cross_domain_analytics.sql  gold_customer_summary.sql  gold_order_metrics.sql  gold_transaction_summary.sql  schema.yml
dbt_project/models/silver/: schema.yml  silver_customers.sql  silver_orders.sql  silver_transactions.sql
docs/: data_vault_design.md  demo_walkthrough.md  generate_diagrams.py  presentation_outline.md  sample_queries.sql
scripts/: __init__.py  generate_sample_data.py  run_data_quality.py  setup_snowflake.py  upload_to_s3.py
snowflake/ddl/: 01_external_stages.sql  02_hubs.sql  03_links.sql  04_satellites.sql
terraform/: README.md  glue.tf  iam.tf  outputs.tf  provider.tf  s3.tf  snowflake.tf  variables.tf
tests/: __init__.py  conftest.py  test_generate_sample_data.py
